--- a/RULE-SET/Microsoft/Normal.yaml
+++ b/RULE-SET/Microsoft/Normal.yaml
@@ -1,4 +1,4 @@
-# Microsoft 全域名列表 from ACL4SSR-rules/Clash/Microsoft.list & ConnersHua-rules/Surge/Ruleset/Extra/Microsoft
+# Microsoft 全域名列表 from ACL4SSR-rules/Clash/Microsoft.list
 # 已包含至 Domain 列表中
 
 payload:
