--- a/RULE-SET/Microsoft/Teams.yaml
+++ b/RULE-SET/Microsoft/Teams.yaml
@@ -1,5 +1,7 @@
+# Microsoft Teams
+# 已包含至 Domain
+
 payload:
-  # Microsoft Teams
   - DOMAIN-SUFFIX,teams.cdn.live.net
   - DOMAIN-SUFFIX,teams.live.com
   - DOMAIN-SUFFIX,teams.microsoft.com
