--- a/RULE-SET/Unbreak.yaml
+++ b/RULE-SET/Unbreak.yaml
@@ -1,41 +1,41 @@
-payload:
 # 全局代理排除
 # 转写自 https://github.com/DivineEngine/Profiles/blob/master/Surge/Ruleset/Unbreak.list
+# break: domain-text
 
 # > General
-  - DOMAIN,app.adjust.com
-  - DOMAIN,app.appsflyer.com
-  - DOMAIN,bdtj.tagtic.cn
+app.adjust.com
+app.appsflyer.com
+bdtj.tagtic.cn
 # > Alibaba
-  - DOMAIN,log.mmstat.com
-  - DOMAIN,sycm.mmstat.com
+log.mmstat.com
+sycm.mmstat.com
 # > Google
-  - DOMAIN-SUFFIX,blog.google // Google Blog
-  - DOMAIN-SUFFIX,googletraveladservices.com // Google Flights
-  - DOMAIN,clientservices.googleapis.com
-  - DOMAIN,update.googleapis.com
-  - DOMAIN,dl.google.com
-  - DOMAIN,dl.l.google.com
-  - DOMAIN,update.googleapis.com
+.blog.google // Google Blog
+.googletraveladservices.com // Google Flights
+clientservices.googleapis.com
+update.googleapis.com
+dl.google.com
+dl.l.google.com
+update.googleapis.com
 # >> Firebase Cloud Messaging
-  - DOMAIN,mtalk.google.com
-  - DOMAIN,alt1-mtalk.google.com
-  - DOMAIN,alt2-mtalk.google.com
-  - DOMAIN,alt3-mtalk.google.com
-  - DOMAIN,alt4-mtalk.google.com
-  - DOMAIN,alt5-mtalk.google.com
-  - DOMAIN,alt6-mtalk.google.com
-  - DOMAIN,alt7-mtalk.google.com
-  - DOMAIN,alt8-mtalk.google.com
+mtalk.google.com
+alt1-mtalk.google.com
+alt2-mtalk.google.com
+alt3-mtalk.google.com
+alt4-mtalk.google.com
+alt5-mtalk.google.com
+alt6-mtalk.google.com
+alt7-mtalk.google.com
+alt8-mtalk.google.com
 # >> Paramount+
-#   - DOMAIN,pubads.g.doubleclick.net
+# pubads.g.doubleclick.net
 # > Tencent
-  - DOMAIN,fairplay.l.qq.com
-  - DOMAIN,livew.l.qq.com
-  - DOMAIN,vd.l.qq.com
-  - DOMAIN,vi.l.qq.com
+fairplay.l.qq.com
+livew.l.qq.com
+vd.l.qq.com
+vi.l.qq.com
 # > Strava
-  - DOMAIN,analytics.strava.com
+analytics.strava.com
 # > Umeng
-  - DOMAIN,msg.umeng.com
-  - DOMAIN,msg.umengcloud.com
+msg.umeng.com
+msg.umengcloud.com
