--- a/RULE-SET/Unbreak.yaml
+++ b/RULE-SET/Unbreak.yaml
@@ -1,41 +1,33 @@
 # 全局代理排除
-# 转写自 https://github.com/DivineEngine/Profiles/blob/master/Surge/Ruleset/Unbreak.list
-# break: domain-text
+# 转写自 https://github.com'/DivineEngine/Profiles/blob/master/Surge/Ruleset/Unbreak.list
+# break: domain
 
-# > General
-app.adjust.com
-app.appsflyer.com
-bdtj.tagtic.cn
-# > Alibaba
-log.mmstat.com
-sycm.mmstat.com
-# > Google
-.blog.google // Google Blog
-.googletraveladservices.com // Google Flights
-clientservices.googleapis.com
-update.googleapis.com
-dl.google.com
-dl.l.google.com
-update.googleapis.com
-# >> Firebase Cloud Messaging
-mtalk.google.com
-alt1-mtalk.google.com
-alt2-mtalk.google.com
-alt3-mtalk.google.com
-alt4-mtalk.google.com
-alt5-mtalk.google.com
-alt6-mtalk.google.com
-alt7-mtalk.google.com
-alt8-mtalk.google.com
-# >> Paramount+
-# pubads.g.doubleclick.net
-# > Tencent
-fairplay.l.qq.com
-livew.l.qq.com
-vd.l.qq.com
-vi.l.qq.com
-# > Strava
-analytics.strava.com
-# > Umeng
-msg.umeng.com
-msg.umengcloud.com
+payload:
+  - app.adjust.com
+  - app.appsflyer.com
+  - bdtj.tagtic.cn
+  - log.mmstat.com
+  - sycm.mmstat.com
+  - +.blog.google
+  - +.googletraveladservices.com
+  - clientservices.googleapis.com
+  - update.googleapis.com
+  - dl.google.com
+  - dl.l.google.com
+  - update.googleapis.com
+  - mtalk.google.com
+  - alt1-mtalk.google.com
+  - alt2-mtalk.google.com
+  - alt3-mtalk.google.com
+  - alt4-mtalk.google.com
+  - alt5-mtalk.google.com
+  - alt6-mtalk.google.com
+  - alt7-mtalk.google.com
+  - alt8-mtalk.google.com
+  - fairplay.l.qq.com
+  - livew.l.qq.com
+  - vd.l.qq.com
+  - vi.l.qq.com
+  - analytics.strava.com
+  - msg.umeng.com
+  - msg.umengcloud.com
