--- a/Config.yaml
+++ b/Config.yaml
@@ -1,87 +1,101 @@
-mixed-port: 8899
-mode: Rule
+geodata-mode: true
+geox-url:
+  geosite: "https://github.com/DustinWin/ruleset_geodata/releases/download/clash/geosite-all.dat"
+  geoip: "https://github.com/DustinWin/ruleset_geodata/releases/download/clash/geoip-all.dat"
+  mmdb: "https://github.com/DustinWin/ruleset_geodata/releases/download/clash/Country-all.mmdb"
+geo-auto-update: true
+geo-update-interval: 24
 
 dns:
   enable: true
-  ipv6: false
+  prefer-h3: true
+  ipv6: true
+  listen: 0.0.0.0:1053
+  fake-ip-range: 198.18.0.1/16
   enhanced-mode: fake-ip
+  fake-ip-filter: [geosite:fakeip-filter]
   nameserver:
-    - 119.29.29.29
+    - system
+    - https://doh.pub/dns-query
+    - https://dns.alidns.com/dns-query
 
+## 代理集合（获取机场订阅链接内的所有节点）
 proxy-providers:
-  ALL:
+  MESL:
     type: http
-    path: ./Sub.yaml
-    url: *
-    interval: 172800
+    ## 机场订阅链接，使用 Clash 链接
+    url: "https://911tg3rs.com/api/v1/client/subscribe?token=a5c98e74c61ba806664bdeb8951d87e0"
+    path: ./proxies/airport1.yaml
+    interval: 86400
+    ## 初步筛选需要的节点，可有效减轻路由器压力，支持正则表达式，不筛选可删除此配置项
+    ## 初步排除不需要的节点，支持正则表达式，若不排除可删除此配置项
     health-check:
       enable: true
-      interval: 6000
-      url: http://cp.cloudflare.com/generate_204
+      url: https://www.gstatic.com/generate_204
+      interval: 600
+    override:
+      ## 为节点名称添加固定前缀，如节点名称原为“香港节点”会变成“🛫 我的机场 1-香港节点”；推荐有多个机场时使用
+      additional-prefix: "MESL - "
 
+  EFCLOUD:
+    type: http
+    url: "https://fctahfbxlk.eastasia.cloudapp.azure.com/queue/list?token=db3e048e8190b8c2d8379aabe251dfea"
+    path: ./proxies/airport2.yaml
+    interval: 86400
+    health-check:
+      enable: true
+      url: https://www.gstatic.com/generate_204
+      interval: 600
+    override:
+      ## 为节点名称添加固定前缀，如节点名称原为“香港节点”会变成“🛫 我的机场 2-香港节点”；推荐有多个机场时使用
+      additional-prefix: "EF - "
+
+## 策略组
 proxy-groups:
-  - name: TV
-    type: select
-    proxies:
-      - DIRECT
-      - PROXY
-  - name: PROXY
-    type: select
-    use:
-      - ALL
+  ## 手动选择国家或地区节点；根据“国家或地区策略组”名称对 `proxies` 值进行增删改，须一一对应
+  - {name: 🚀 节点选择, type: select, include-all-providers: true}
+  ## 若机场的 UDP 质量不是很好，导致某游戏无法登录或进入房间，可以添加 `disable-udp: true` 配置项解决
+  - {name: 📺 哔哩哔哩, type: select, proxies: [🎯 全球直连, 🇭🇰 香港节点, 🇹🇼 台湾节点]}
+  - {name: 🐟 漏网之鱼, type: select, proxies: [🚀 节点选择, 🎯 全球直连]}
+  ## 选择`🎯 全球直连`为测试本地网络（运营商网络速度和 IPv6 支持情况），可选择其它节点用于测试机场节点速度和 IPv6 支持情况
+  - {name: 📈 网络测试, type: select, proxies: [🚀 节点选择, 🎯 全球直连]}
+  - {name: 🤖 人工智能, type: select, proxies: [🚀 节点选择, 🎯 全球直连]}
+  - {name: 🎮 游戏服务, type: select, proxies: [🎯 全球直连, 🚀 节点选择]}
+  - {name: 🪟 微软服务, type: select, proxies: [🎯 全球直连, 🚀 节点选择]}
+  - {name: 🇬 谷歌服务, type: select, proxies: [🎯 全球直连, 🚀 节点选择]}
+  - {name: 🍎 苹果服务, type: select, proxies: [🎯 全球直连, 🚀 节点选择]}
+  - {name: 🇨🇳 直连域名, type: select, proxies: [🎯 全球直连, 🚀 节点选择]}
+  - {name: 🇨🇳 直连 IP, type: select, proxies: [🎯 全球直连, 🚀 节点选择]}
+  - {name: 🪜 代理域名, type: select, proxies: [🚀 节点选择, 🎯 全球直连]}
+  - {name: 📲 电报消息, type: select, proxies: [🚀 节点选择]}
+  - {name: 🔒 私有网络, type: select, proxies: [🎯 全球直连]}
+  - {name: 🛑 广告拦截, type: select, proxies: [REJECT]}
+  - {name: 🎯 全球直连, type: select, proxies: [DIRECT]}
 
-rule-providers:
-  Unbreak:
-    type: http
-    path: ./Unbreak.yaml
-    behavior: domain
-    url: 'https://fastly.jsdelivr.net/gh/Gomiaco/Rules/RULE-SET/Unbreak.yaml'
-    interval: 172800
-  Advertising:
-    type: http
-    path: ./Ad.yaml
-    behavior: domain
-    url: 'https://fastly.jsdelivr.net/gh/Gomiaco/Rules/RULE-SET/Advertising.yaml'
-    interval: 172800
-  Streaming:
-    type: http
-    path: ./Str.yaml
-    behavior: domain
-    url: 'https://fastly.jsdelivr.net/gh/Gomiaco/Rules/RULE-SET/Streaming.yaml'
-    interval: 172800
-  StreamingSE:
-    type: http
-    path: ./StrSE.yaml
-    behavior: domain
-    url: 'https://fastly.jsdelivr.net/gh/Gomiaco/Rules/RULE-SET/StreamingSE.yaml'
-    interval: 172800
-  Global:
-    type: http
-    path: ./Global.yaml
-    behavior: domain
-    url: 'https://fastly.jsdelivr.net/gh/Gomiaco/Rules/RULE-SET/Global.yaml'
-    interval: 172800
-  Domestic:
-    type: http
-    path: ./Domestic.yaml
-    behavior: domain
-    url: 'https://fastly.jsdelivr.net/gh/Gomiaco/Rules/RULE-SET/Domestic.yaml'
-    interval: 172800
+  ## ----------------国家或地区策略组---------------------
+  ## 自动选择节点，即按照 url 测试结果使用延迟最低的节点；测试后容差大于 50ms 才会切换到延迟低的那个节点；筛选出“香港”节点，支持正则表达式
+  - {name: 🇭🇰 香港节点, type: select, include-all-providers: true, filter: "(?i)港|hk|hongkong|hong kong"}
+  ## 节点负载均衡，即将请求均匀分配到多个节点上，优点是更稳定，速度可能有提升；将相同顶级域名的请求分配给策略组内的同一个代理节点；推荐在节点复用比较多的情况下使用
+  - {name: 🇹🇼 台湾节点, type: select, include-all-providers: true, filter: "(?i)台|tw|taiwan"}
+  ## 可使用 `include-all-providers: true` 代替 `use: [🛫 我的机场 1, 🛫 我的机场 2, ...]`，意思为引入所有代理集合
 
+## 规则
 rules:
-  - DOMAIN-KEYWORD,scienbizip,DIRECT
-  - DOMAIN-KEYWORD,ywsmi,DIRECT
-  - DOMAIN-KEYWORD,inquartik,DIRECT
-  - DOMAIN-KEYWORD,patentcloud,DIRECT
-  - DOMAIN-KEYWORD,wispro,DIRECT
-  - DOMAIN-SUFFIX,sapsf.com,DIRECT
-
-  - RULE-SET,Unbreak,DIRECT
-  - RULE-SET,Advertising,REJECT
-  - RULE-SET,Streaming,PROXY
-  - RULE-SET,StreamingSE,TV
-  - RULE-SET,Global,PROXY
-  - RULE-SET,Domestic,DIRECT
-
-  - GEOIP,CN,DIRECT
-  - MATCH,PROXY
+  ## 自定义规则优先放前面
+  ## 为了使 P2P 流量（BT 下载）走直连，可添加一条 `DST-PORT` 规则（ShellCrash 会默认开启“只代理常用端口”，可删除此条 `DST-PORT`）
+  - DST-PORT,6881-6889,🎯 全球直连
+  - GEOSITE,private,🔒 私有网络
+  - GEOSITE,ads,🛑 广告拦截
+  - GEOSITE,bilibili,📺 哔哩哔哩
+  - GEOSITE,microsoft-cn,🪟 微软服务
+  - GEOSITE,apple-cn,🍎 苹果服务
+  - GEOSITE,google-cn,🇬 谷歌服务
+  - GEOSITE,games-cn,🎮 游戏服务
+  - GEOSITE,ai,🤖 人工智能
+  - GEOSITE,networktest,📈 网络测试
+  - GEOSITE,proxy,🪜 代理域名
+  - GEOSITE,cn,🇨🇳 直连域名
+  - GEOIP,telegram,📲 电报消息,no-resolve
+  - GEOIP,private,🔒 私有网络,no-resolve
+  - GEOIP,cn,🇨🇳 直连 IP
+  - MATCH,🐟 漏网之鱼
