--- a/Config.yaml
+++ b/Config.yaml
@@ -53,7 +53,7 @@ proxy-providers:
 ## 策略组
 proxy-groups:
   ## 手动选择国家或地区节点；根据“国家或地区策略组”名称对 `proxies` 值进行增删改，须一一对应
-  - {name: 🚀 节点选择, type: select, include-all-providers: true}
+  - {name: 🚀 节点选择, type: select, include-all-providers: true, include-all: true}
   ## 若机场的 UDP 质量不是很好，导致某游戏无法登录或进入房间，可以添加 `disable-udp: true` 配置项解决
   - {name: 📺 哔哩哔哩, type: select, proxies: [🎯 全球直连, 🇭🇰 香港节点, 🇹🇼 台湾节点]}
   - {name: 🐟 漏网之鱼, type: select, proxies: [🚀 节点选择, 🎯 全球直连]}
@@ -74,16 +74,15 @@ proxy-groups:
 
   ## ----------------国家或地区策略组---------------------
   ## 自动选择节点，即按照 url 测试结果使用延迟最低的节点；测试后容差大于 50ms 才会切换到延迟低的那个节点；筛选出“香港”节点，支持正则表达式
-  - {name: 🇭🇰 香港节点, type: select, include-all-providers: true, filter: "(?i)港|hk|hongkong|hong kong"}
+  - {name: 🇭🇰 香港节点, type: select, include-all-providers: true, include-all: true, filter: "(?i)港|hk|hongkong|hong kong"}
   ## 节点负载均衡，即将请求均匀分配到多个节点上，优点是更稳定，速度可能有提升；将相同顶级域名的请求分配给策略组内的同一个代理节点；推荐在节点复用比较多的情况下使用
-  - {name: 🇹🇼 台湾节点, type: select, include-all-providers: true, filter: "(?i)台|tw|taiwan"}
+  - {name: 🇹🇼 台湾节点, type: select, include-all-providers: true, include-all: true, filter: "(?i)台|tw|taiwan"}
   ## 可使用 `include-all-providers: true` 代替 `use: [🛫 我的机场 1, 🛫 我的机场 2, ...]`，意思为引入所有代理集合
 
 ## 规则
 rules:
   ## 自定义规则优先放前面
   ## 为了使 P2P 流量（BT 下载）走直连，可添加一条 `DST-PORT` 规则（ShellCrash 会默认开启“只代理常用端口”，可删除此条 `DST-PORT`）
-  - DST-PORT,6881-6889,🎯 全球直连
   - GEOSITE,private,🔒 私有网络
   - GEOSITE,ads,🛑 广告拦截
   - GEOSITE,bilibili,📺 哔哩哔哩
